@@ -18,6 +18,7 @@ BeeBEEP 3.0.8
 - Fixed a bug in opening url with diacritic characters in path
 - Preset Messages
 - Added option to read a "beegroups.ini" file (beta)
+- Added option to set layout in RTL mode
 
 BeeBEEP 3.0.7
 - ShareBox: new feature in beta (can share files like dropbox with all users connected)
